# simpson

./: CMakeLists.txt  OCroutines.c  OCroutines.h  averaging.c  blockdiag.c  cm.c  cm.h  complx.c  complx.h  cryst.c  crystdat.c  defs.h  distortions.c  fidcalc.c  ftools.c  ham.c  ham.h  iodata.c  main.c  misc.tcl  pulse.c  pulse.h  readsys.c  rfprof.c  rfprof.h  rfshapes.c  sim.c  sim.h  simpson.c  simpson.tcl  slave.tcl  spinach.c  spinsys.c  spinsys.h  spinsys_struct.h  tclcode.c
